# experiments

./: README.txt
3D-Reconstruction/: CMakeLists.txt
3D-Reconstruction/exe/: TestMoveWorld.cpp  ftDisplay.cpp  testgripper.cpp
balancing/: .gitignore  .plan.swp  CMakeLists.txt  gains.txt  plan
balancing/data/: MassProp.table  README  balance-dump-00005.dat.REMOVED.git-id  balance-dump-00010.dat.REMOVED.git-id  balance-dump-00012.dat.REMOVED.git-id  balance-dump-00014.dat.REMOVED.git-id  balance-dump-00015.dat.REMOVED.git-id  balance-dump-00016.dat.REMOVED.git-id  balance-dump-00017.dat.REMOVED.git-id  balance-dump-00019.dat.REMOVED.git-id  balance-dump-00021.dat.REMOVED.git-id  balance-dump-00022.dat.REMOVED.git-id  balance-dump-00024.dat.REMOVED.git-id  balance-dump-00029.dat.REMOVED.git-id  balance-dump-00034.dat.REMOVED.git-id  balance-dump-00036.dat.REMOVED.git-id  balance-dump-00037.dat.REMOVED.git-id  balance-dump-00038.dat.REMOVED.git-id  balance-dump-00039.dat.REMOVED.git-id  balance-dump-00042.dat.REMOVED.git-id  balance-dump-00043.dat.REMOVED.git-id  balance-dump-00044.dat.REMOVED.git-id  balance-dump-00045.dat.REMOVED.git-id  balance-dump-00049.dat.REMOVED.git-id  balance-dump-00050.dat.REMOVED.git-id  balance-dump-00052.dat.REMOVED.git-id  balance-dump-00055.dat.REMOVED.git-id  balance-dump-00057.dat.REMOVED.git-id  balance-dump-00058.dat.REMOVED.git-id  balance-dump-00059.dat.REMOVED.git-id  balance-dump-00060.dat.REMOVED.git-id  balance-dump-00061.dat.REMOVED.git-id  balance-dump-00063.dat.REMOVED.git-id  balance-dump-00064.dat.REMOVED.git-id  balance-dump-00065.dat.REMOVED.git-id  balance-dump-00066.dat.REMOVED.git-id  balance-dump-00071.dat.REMOVED.git-id  balance-dump-00089.dat.REMOVED.git-id  balance-dump-00090.dat.REMOVED.git-id  (+23 more)
common/: initModules.h  kinematics.h  motion.h
common/visualizer/: CMakeLists.txt  krang-vis-tab.cpp  krang-vis-tab.hpp
compliance/: CMakeLists.txt
current_control/: CMakeLists.txt
forwardKinematics/: CMakeLists.txt
ft/: CMakeLists.txt
ft/exe/: 05-external.cpp
grippers/: .CMakeLists.txt.swp  CMakeLists.txt
kinematics/: CMakeLists.txt
manipulation/: CMakeLists.txt
navigation/: CMakeLists.txt
teleop/: CMakeLists.txt  nehchal.sh
twoHands/: CMakeLists.txt
(+211 files in other folders)
